Issue #3226712: Elements in text tiles are not aligned

--- a/themes/custom/droopler_theme/scss/components/_d_p_text_blocks.scss
+++ b/themes/custom/droopler_theme/scss/components/_d_p_text_blocks.scss
@@ -90,6 +90,7 @@ $d-p-single-text-box-grid-large-padding: $grid-gutter-width !default;
   .content-wrapper {
     position: relative;
     z-index: 2;
+    word-break: break-all;
   }
 
   .d-p-text-block {
@@ -141,7 +142,11 @@ $d-p-single-text-box-grid-large-padding: $grid-gutter-width !default;
       justify-content: center;
 
       .content-wrapper {
+        text-align: center;
         padding: $d-p-text-blocks-tiles-padding 0;
+        .field--name-field-d-main-title{
+          text-align: center;
+        }
       }
     }
 
